--- a/style.css
+++ b/style.css
@@ -10,3 +10,35 @@
 a {
     text-decoration: none;
 }
+
+#header {
+    background: black;
+    color: white;
+    padding: 20px 0;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header h1 {
+    color: white;
+    font-size: 35px;
+}
+
+.navbar a {
+    color: white;
+    padding: 0 20px;
+    font-size: 18px;
+}
+
+.header button {
+    color: white;
+    background: rebeccapurple;
+    padding: 15px 30px;
+    border: none;
+    cursor: pointer;
+    font-size: 17px;
+}
